chore: add .env files in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ backend/!.vscode/settings.json
 backend/!.vscode/tasks.json
 backend/!.vscode/launch.json
 backend/!.vscode/extensions.json
+
+# .env File
+.env
