--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # compiled output
 backend/dist
 backend/node_modules
+frontend/node_modules
+frontend/build
 
 # Logs
 backend/logs
@@ -36,3 +38,4 @@ backend/!.vscode/extensions.json
 
 # .env File
 .env
+next-env.d.ts
