--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@hookform/resolvers": "^3.1.0",
     "@tanstack/react-query": "^4.29.3",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
@@ -24,6 +25,8 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "react-hook-form": "^7.43.9",
+    "typescript": "5.0.4",
+    "zod": "^3.21.4"
   }
 }
