--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-masonry-css": "^1.0.16",
     "typescript": "5.0.4",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^4.3.7"
   }
 }
